BisayaIDE v-1.0.0 is released